<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="5"
    tools:context=".fragment.NumericFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:weightSum="4">

        <Button
            android:id="@+id/clear"
            style="@style/Button"
            android:text="@string/clear"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/divide"
            style="@style/Button"
            android:text="@string/divide"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/multiply"
            style="@style/Button"
            android:text="@string/multiply"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/backspace"
            style="@style/Button"
            android:drawableRight="@drawable/ic_backspace_black_24dp"
            android:drawableEnd="@drawable/ic_backspace_black_24dp"
            android:drawablePadding="30dp"
            android:padding="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:weightSum="4">

        <Button
            android:id="@+id/button_1"
            style="@style/Button"
            android:text="@string/_1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_2"
            style="@style/Button"
            android:text="@string/_2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_3"
            style="@style/Button"
            android:text="@string/_3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/plus"
            style="@style/Button"
            android:text="@string/plus"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:weightSum="4">

        <Button
            android:id="@+id/button_4"
            style="@style/Button"
            android:text="@string/_4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_5"
            style="@style/Button"
            android:text="@string/_5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_6"
            style="@style/Button"
            android:text="@string/_6"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/minus"
            style="@style/Button"
            android:text="@string/minus"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:weightSum="4">

        <Button
            android:id="@+id/button_7"
            style="@style/Button"
            android:text="@string/_7"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_8"
            style="@style/Button"
            android:text="@string/_8"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_9"
            style="@style/Button"
            android:text="@string/_9"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/parenthesis"
            style="@style/Button"
            android:text="@string/parenthesis"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="2dp"
        android:weightSum="4">

        <Button
            android:id="@+id/button_0"
            style="@style/Button"
            android:text="@string/_0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_decimal"
            style="@style/Button"
            android:text="@string/decimal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button_sign"
            style="@style/Button"
            android:text="@string/sign"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/equal_to"
            style="@style/Button"
            android:text="@string/equal_to"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </LinearLayout>

</LinearLayout>