<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main_portrait"
    android:orientation="vertical"
    android:background="#000"
    android:weightSum="10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom|end"
        android:textColor="#fff"
        android:layout_weight="3"
        android:textIsSelectable="true"
        tools:ignore="TextViewEdits" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        >
        <Button
            style="@style/Button"
            android:id="@+id/scientific"
            android:layout_gravity="center"
            android:text="@string/scientific"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry" />
        <Button
            style="@style/Button"
            android:id="@+id/copy"
            android:layout_gravity="center"
            android:text="@string/copy"
            android:drawableStart="@drawable/ic_copy"
            android:drawableLeft="@drawable/ic_copy"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry"
            />
        <Button
            style="@style/Button"
            android:id="@+id/paste"
            android:layout_gravity="center"
            android:text="@string/paste"
            />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/number_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

 </LinearLayout>